<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="swipe_refresh" type="id"/>
    <item name="list_match" type="id"/>
    <item name="date_match" type="id"/>
    <item name="badge_home" type="id"/>
    <item name="home_team" type="id"/>
    <item name="home_score" type="id"/>
    <item name="away_score" type="id"/>
    <item name="away_team" type="id"/>
    <item name="badge_away" type="id"/>
    <item name="view_pager" type="id"/>
    <item name="tabs" type="id"/>
    <item name="bottom_layout" type="id"/>
    <item name="frame_parent" type="id"/>
    <item name="team_badge" type="id"/>
    <item name="title_team" type="id"/>
    <item name="progress_loader" type="id"/>
    <item name="home_goals_player" type="id"/>
    <item name="home_shots" type="id"/>
    <item name="home_yellow" type="id"/>
    <item name="home_red" type="id"/>
    <item name="home_kiper" type="id"/>
    <item name="home_df" type="id"/>
    <item name="home_md" type="id"/>
    <item name="home_fw" type="id"/>
    <item name="home_sub" type="id"/>
    <item name="away_goals_player" type="id"/>
    <item name="away_shots" type="id"/>
    <item name="away_yellow" type="id"/>
    <item name="away_red" type="id"/>
    <item name="away_kiper" type="id"/>
    <item name="away_df" type="id"/>
    <item name="away_md" type="id"/>
    <item name="away_fw" type="id"/>
    <item name="away_sub" type="id"/>
    <item name="away_badge" type="id"/>
    <item name="home_badge" type="id"/>
    <item name="container_detail" type="id"/>
    <item name="toolbar" type="id"/>
    <item name="year_team" type="id"/>
    <item name="stadium" type="id"/>
    <item name="manager" type="id"/>
    <item name="name_team" type="id"/>
    <item name="player_face" type="id"/>
    <item name="player_name" type="id"/>
    <item name="player_banner" type="id"/>
    <item name="player_desc" type="id"/>
    <item name="player_weight" type="id"/>
    <item name="player_height" type="id"/>
    <item name="player_position" type="id"/>
    <item name="collapsing_toolbar" type="id"/>
    <item name="spinner" type="id"/>
    <item name="alarm_action" type="id"/>
    <item name="list_team" type="id"/>
    <item name="list_search" type="id"/>
    <item name="list_player" type="id"/>
</resources>