<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favorite_action"
        android:icon="@drawable/ic_star_border"
        android:title="@string/favorites"
        android:iconifiedByDefault="false"
        app:showAsAction="ifRoom" />
</menu>